# wagtail-image-from-url

./: .editorconfig  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish.yml  tests.yml
image_url_upload/: MANIFEST.in  __init__.py  apps.py  forms.py  setup.py  test_settings.py  test_urls.py  utils.py  views.py  wagtail_hooks.py
image_url_upload/static/image_url_upload/js/: main.js
image_url_upload/templates/image_url_upload/: add_via_url.html
tests/: __init__.py  settings.py  test_forms.py  test_hello.py  test_utils.py  test_views.py  test_wagtail_hooks.py  urls.py
